engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_prefilled_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Rename thread

› Current project title

  enter submit · esc back
